apps/ai/open-webui/templates/temp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
spec:
  hostnames:
    - chat.mobrockers.com
  parentRefs:
    - name: private
      namespace: envoy-gateway
      sectionName: web-https
    - name: public
      namespace: envoy-gateway
      sectionName: web-https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: open-webui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 600s
